# middleware/validation/seller.validation.js
@@ -1,0 +1,27 @@
+const validator = require('./validate');
+
+const saveSeller = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
+    phone: 'string',
+    fixedSalary: 'required|numeric',
+    commissionRate: 'required|numeric'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+module.exports = {
+    saveSeller
+};
